<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="above_other_screen">Above other screen</string>
    <string name="achievement_missable">Missable</string>
    <string name="achievement_missable_description">This achievement can be missed during a playthrough</string>
    <string name="achievement_progress">%1$d/%2$d</string>
    <string name="achievement_unlocked">Achievement unlocked!</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_failed_load">Failed to load achievements!</string>
    <string name="achievements_failed_load_tip">Make sure you are Online</string>
    <string name="achievements_loaded">Achievements loaded</string>
    <string name="achievements_unlocked_compact">Unlocked: %1$d/%2$d</string>
    <string name="action_backgrounds_new">New background</string>
    <string name="action_boot_firmware">Boot firmware</string>
    <string name="action_layouts_new">New layout</string>
    <string name="action_refresh_rom_list">Refresh ROM list</string>
    <string name="action_search_roms">Search ROMs</string>
    <string name="action_sort_alphabetically">Alphabetically</string>
    <string name="action_sort_recently_played">Recently played</string>
    <string name="action_sort_roms">Sort ROMs</string>
    <string name="add_cheat_folder">Add cheat folder</string>
    <string name="add_component">Add component</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">melonDS</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspect_ratio_16_9">16:9 (Widescreen)</string>
    <string name="aspect_ratio_4_3">4:3 (Original)</string>
    <string name="aspect_ratio_unrestricted">Unrestricted</string>
    <string name="audio_latency">Audio latency</string>
    <string name="background">Background</string>
    <string name="background_add_processing_failed">Failed to process the selected background image. Make sure it\'s not corrupted.</string>
    <string name="background_deleted">Background deleted</string>
    <string name="background_mode">Background mode</string>
    <string name="background_name">Background name</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="backup_external_layout">Backup external layout</string>
    <string name="backup_internal_layout">Backup internal layout</string>
    <string name="backup_settings">Backup settings</string>
    <string name="bios_directory">DS BIOS directory</string>
    <string name="bitrate">Bitrate</string>
    <string name="bottom_screen">Bottom Screen</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cache_size">Cache size: %s</string>
    <string name="cache_size_calculating">Cache size: calculating…</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cant_load_empty_slot">Can\'t load an empty save state slot</string>
    <string name="category_audio">Audio</string>
    <string name="category_audio_summary">Volume, latency, microphone source</string>
    <string name="category_general">General</string>
    <string name="category_general_summary">Theme, generic settings</string>
    <string name="category_roms">ROMs</string>
    <string name="category_roms_summary">Search directory, icon filtering, cache settings</string>
    <string name="category_save_files">Save Files</string>
    <string name="category_save_files_summary">Save file &amp; save state locations</string>
    <string name="category_system">System</string>
    <string name="category_system_summary">Firmware settings, custom BIOS, JIT</string>
    <string name="category_video">Video</string>
    <string name="category_video_summary">Filter, threaded rendering, FPS counter</string>
    <string name="center_horizontal">Center horizontally</string>
    <string name="center_vertical">Center vertically</string>
    <string name="challenge_started">Challenge started</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="cheat_code">Code</string>
    <string name="cheat_deleted">Cheat \"%1$s\" deleted</string>
    <string name="cheat_folder_default_name">My cheats</string>
    <string name="cheat_name">Cheat name</string>
    <string name="cheats">Cheats</string>
    <string name="cheats_database">Cheats database (XML format)</string>
    <string name="cheats_summary">Enable &amp; import cheat codes</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="check_for_updates_summary">When enabled, the app will periodically check for available updates</string>
    <string name="clear_extracted_rom_cache">Clear extracted ROM cache</string>
    <string name="close">Close</string>
    <string name="custom_bios_firmware">Custom BIOS and firmware</string>
    <string name="delete">Delete</string>
    <string name="dsi_camera_image">DSi camera image</string>
    <string name="dsi_camera_source">DSi camera source</string>
    <string name="enable_jit">Enable JIT</string>
    <string name="enable_jit_summary">Improves performance but may cause freezes or crashes.</string>
    <string name="enable_rich_presence">Enable rich presence</string>
    <string name="enable_sound">Enable sound</string>
    <string name="filter">Filter</string>
    <string name="firmware_birthday">Birthday</string>
    <string name="firmware_favourite_colour">Favourite colour</string>
    <string name="firmware_language">Language</string>
    <string name="firmware_message">Message</string>
    <string name="firmware_nickname">Nickname</string>
    <string name="fps_counter_position">FPS counter position</string>
    <string name="hardcore_mode">Hardcore mode</string>
    <string name="hardcore_mode_summary">Allows hardcore achievements to be earned. Cheats, save states, slow-motion, and rewind are disabled</string>
    <string name="input">Input</string>
    <string name="input_summary">Key mapping, layouts, haptic feedback</string>
    <string name="internal_firmware_settings">Internal firmware settings</string>
    <string name="internal_firmware_settings_summary">Adjust the settings of the internal firmware.</string>
    <string name="internal_resolution">Internal resolution</string>
    <string name="interpolation">Interpolation</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_aspect_ratio">Aspect ratio:</string>
    <string name="label_height">Height</string>
    <string name="label_size">Size</string>
    <string name="label_width">Width</string>
    <string name="login_with_retro_achievements">Login with RetroAchievements</string>
    <string name="mac_address">MAC address</string>
    <string name="max_rom_cache_size">Max. ROM cache size</string>
    <string name="menu">Menu</string>
    <string name="microphone_source">Microphone source</string>
    <string name="randomize_mac_address">Randomize MAC address</string>
    <string name="randomize_mac_address_summary">When enabled, a random MAC address is used at every boot. This may cause some games to think its running on a different system and can break time based events.</string>
    <string name="renderer">Renderer</string>
    <string name="restore_external_layout">Restore external layout</string>
    <string name="restore_internal_layout">Restore internal layout</string>
    <string name="retroachievements">RetroAchievements</string>
    <string name="retroachievements_summary">Login &amp; manage RetroAchievements integration</string>
    <string name="rich_presence_summary">Allows other RetroAchievement users to see what you are playing</string>
    <string name="rom_icon_filtering">Icon filtering</string>
    <string name="rom_search_directory">Search directory</string>
    <string name="save_file_directory">Save file directory</string>
    <string name="save_next_rom">Save next to ROM file</string>
    <string name="save_state_location">Save state location</string>
    <string name="show_active_challenge_indicators">Show active challenge indicators</string>
    <string name="show_active_challenge_indicators_summary">Shows on-screen indicators while certain achievements can be earned</string>
    <string name="show_leaderboard_indicators">Show leaderboard indicators</string>
    <string name="show_leaderboard_indicators_summary">Shows on-screen indicators when a leaderboard attempt is in progress</string>
    <string name="show_progress_indicators">Show progress indicators</string>
    <string name="show_progress_indicators_summary">Shows on-screen indicators when progress is made towards an achievement</string>
    <string name="threaded_rendering">Threaded rendering</string>
    <string name="threaded_rendering_summary">Improves performance on 3D games when enabled but may cause graphical glitches.</string>
    <string name="volume">Volume</string>
</resources>