<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/category_general" android:summary="@string/category_general_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.GeneralPreferencesFragment" app:icon="@drawable/ic_settings"/>
    <Preference android:title="@string/category_roms" android:summary="@string/category_roms_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.RomsPreferencesFragment" app:icon="@drawable/ic_folder"/>
    <Preference android:title="@string/category_save_files" android:summary="@string/category_save_files_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.SaveFilesPreferencesFragment" app:icon="@drawable/ic_file"/>
    <Preference android:title="@string/category_system" android:summary="@string/category_system_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.SystemPreferencesFragment" app:icon="@drawable/ic_firmware"/>
    <Preference android:title="@string/category_video" android:summary="@string/category_video_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.VideoPreferencesFragment" app:icon="@drawable/ic_video"/>
    <Preference android:title="@string/category_audio" android:summary="@string/category_audio_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.AudioPreferencesFragment" app:icon="@drawable/ic_audio"/>
    <Preference android:title="@string/input" android:summary="@string/input_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.InputPreferencesFragment" app:icon="@drawable/ic_input"/>
    <Preference android:title="@string/retroachievements" android:summary="@string/retroachievements_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.RetroAchievementsPreferencesFragment" app:icon="@drawable/ic_trophy"/>
    <Preference android:title="@string/cheats" android:summary="@string/cheats_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.CheatsPreferencesFragment" app:icon="@drawable/ic_cheat"/>
</PreferenceScreen>
