<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/login_with_retro_achievements" android:key="ra_login" app:iconSpaceReserved="false"/>
    <SwitchPreference android:title="@string/hardcore_mode" android:key="ra_hardcore_enabled" android:summary="@string/hardcore_mode_summary" android:defaultValue="false" app:dependency="ra_login" app:iconSpaceReserved="false"/>
    <SwitchPreference android:title="@string/enable_rich_presence" android:key="ra_rich_presence" android:summary="@string/rich_presence_summary" android:defaultValue="true" app:iconSpaceReserved="false"/>
    <SwitchPreference android:title="@string/show_active_challenge_indicators" android:key="ra_active_challenge_indicators" android:summary="@string/show_active_challenge_indicators_summary" android:defaultValue="true" app:dependency="ra_login" app:iconSpaceReserved="false"/>
    <SwitchPreference android:title="@string/show_progress_indicators" android:key="ra_progress_indicators" android:summary="@string/show_progress_indicators_summary" android:defaultValue="true" app:dependency="ra_login" app:iconSpaceReserved="false"/>
    <SwitchPreference android:title="@string/show_leaderboard_indicators" android:key="ra_leaderboard_indicators" android:summary="@string/show_leaderboard_indicators_summary" android:defaultValue="true" app:dependency="ra_login" app:iconSpaceReserved="false"/>
</PreferenceScreen>
