<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference android:title="@string/save_next_rom" android:key="use_rom_dir" android:defaultValue="true" android:disableDependentsState="true" app:iconSpaceReserved="false"/>
    <me.magnum.melonds.ui.settings.preferences.StoragePickerPreference android:title="@string/save_file_directory" android:key="sram_dir" android:dependency="use_rom_dir" app:iconSpaceReserved="false" app:permissions="read_write" app:persistPermissions="true" app:type="radial"/>
    <ListPreference android:entries="@array/save_state_locations" android:title="@string/save_state_location" android:key="save_state_location" android:summary="%s" android:defaultValue="save_dir" android:entryValues="@array/save_state_location_values" app:iconSpaceReserved="false"/>
</PreferenceScreen>
