<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/image_background" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@null"/>
    <me.magnum.melonds.ui.layouteditor.LayoutEditorView android:id="@+id/view_layout_editor" android:focusable="false" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <ScrollView android:id="@+id/layout_scaling_container" android:background="#ffff" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_alignParentBottom="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_scaling" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/button_delete_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Button.Editor"/>
            <ImageButton android:id="@+id/button_hide_controls" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/m3_split_button_chevron_avd" android:contentDescription="@string/close" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:tint="@color/textLayoutEditor" style="?android:attr/buttonStyleSmall"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/layout_size_labels" android:background="?attr/selectableItemBackground" android:paddingTop="4dp" android:paddingBottom="4dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingVertical="4dp" app:layout_constraintEnd_toStartOf="@+id/barrier_labels" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/button_delete_button" app:layout_constraintWidth_min="wrap">
                <TextView android:textColor="@color/textLayoutEditor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_size"/>
                <TextView android:textColor="@color/textLayoutEditor" android:id="@+id/text_size" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <SeekBar android:layout_gravity="center_vertical" android:id="@+id/seek_bar_size" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/layout_size_labels" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/barrier_labels" app:layout_constraintTop_toTopOf="@+id/layout_size_labels"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/layout_width_labels" android:background="?attr/selectableItemBackground" android:paddingTop="4dp" android:paddingBottom="4dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingVertical="4dp" app:layout_constraintEnd_toStartOf="@+id/barrier_labels" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_size_labels" app:layout_constraintWidth_min="wrap">
                <TextView android:textColor="@color/textLayoutEditor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_width"/>
                <TextView android:textColor="@color/textLayoutEditor" android:id="@+id/text_width" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </LinearLayout>
            <SeekBar android:layout_gravity="center_vertical" android:id="@+id/seek_bar_width" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/layout_width_labels" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/barrier_labels" app:layout_constraintTop_toTopOf="@+id/layout_width_labels"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/layout_height_labels" android:background="?attr/selectableItemBackground" android:paddingTop="4dp" android:paddingBottom="4dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingVertical="4dp" app:layout_constraintEnd_toStartOf="@+id/barrier_labels" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_width_labels" app:layout_constraintWidth_min="wrap">
                <TextView android:textColor="@color/textLayoutEditor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_height"/>
                <TextView android:textColor="@color/textLayoutEditor" android:id="@+id/text_height" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </LinearLayout>
            <SeekBar android:layout_gravity="center_vertical" android:id="@+id/seek_bar_height" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/layout_height_labels" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/barrier_labels" app:layout_constraintTop_toTopOf="@+id/layout_height_labels"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_alpha_labels" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:paddingVertical="4dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_height_labels">
                <TextView android:textColor="@color/textLayoutEditor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_alpha"/>
            </LinearLayout>
            <SeekBar android:layout_gravity="center_vertical" android:id="@+id/seek_bar_alpha" android:padding="8dp" android:layout_width="0dp" android:layout_height="0dp" android:max="100" app:layout_constraintBottom_toBottomOf="@+id/layout_alpha_labels" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/barrier_labels" app:layout_constraintTop_toTopOf="@+id/layout_alpha_labels"/>
            <androidx.constraintlayout.widget.Barrier android:id="@+id/barrier_labels" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierAllowsGoneWidgets="false" app:barrierDirection="end" app:constraint_referenced_ids="layout_size_labels,layout_width_labels,layout_height_labels,layout_alpha_labels"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_aspect_ratio" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:paddingVertical="4dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_alpha_labels">
                <TextView android:textColor="@color/textLayoutEditor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_aspect_ratio"/>
                <Spinner android:id="@+id/spinner_aspect_ratio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="8dp"/>
            </LinearLayout>
            <CheckBox android:textColor="@color/textLayoutEditor" android:id="@+id/checkbox_above_screen" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/above_other_screen" android:layout_marginStart="8dp" android:paddingVertical="4dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_aspect_ratio"/>
            <Button android:id="@+id/button_center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/center_horizontal" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/checkbox_above_screen" style="@style/Button.Editor"/>
            <Button android:id="@+id/button_center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/center_vertical" app:layout_constraintStart_toEndOf="@+id/button_center_horizontal" app:layout_constraintTop_toTopOf="@+id/button_center_horizontal" style="@style/Button.Editor"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_controls" android:background="#ffff" android:focusable="false" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@+id/button_add_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_component" style="@style/Button.Editor"/>
        <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <Button android:id="@+id/button_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu" style="@style/Button.Editor"/>
    </LinearLayout>
</RelativeLayout>
